--- a/message_board_symfony/app/config/services.yml
+++ b/message_board_symfony/app/config/services.yml
@@ -7,3 +7,8 @@ services:
 #    service_name:
 #        class: AppBundle\Directory\ClassName
 #        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
+    app.message_replied_listener:
+        class: AppBundle\EventListener\MessageRepliedListener
+        arguments: ["@logger"]
+        tags:
+            - {name: kernel.event_listener, event: app.message_replied, method: onMessageReplied}
