--- a/message_board_symfony/composer.json
+++ b/message_board_symfony/composer.json
@@ -25,7 +25,9 @@
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
-        "symfony/phpunit-bridge": "^3.0"
+        "symfony/phpunit-bridge": "^3.0",
+        "liip/functional-test-bundle": "^1.6",
+        "doctrine/doctrine-fixtures-bundle": "^2.3"
     },
     "scripts": {
         "post-install-cmd": [
