--- a/message_board_symfony/app/config/config.yml
+++ b/message_board_symfony/app/config/config.yml
@@ -69,3 +69,14 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+
+# SncRedisBundle Configuration
+snc_redis:
+    clients:
+        default:
+            type: phpredis
+            alias: default
+            dsn: redis://localhost
+            logging: false
+            options:
+                connection_persistent: true
